Bug 472496 - Clicking @account links opens in default web browser instead of Tokodon
Summary: Clicking @account links opens in default web browser instead of Tokodon
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.3
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-22 12:37 UTC by Justin Zobel
Modified: 2023-07-26 08:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2023-07-22 12:37:57 UTC
STEPS TO REPRODUCE
1. Find a toot with that uses @username mention 
2. Click link
3. 

OBSERVED RESULT
Link is opened in default web browser

EXPECTED RESULT
Link is opened in Tokodon

Operating System: Fedora Linux 38
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Kernel Version: 6.3.12-200.fc38.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i5-10210U CPU @ 1.60GHz
Memory: 7.5 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics
Manufacturer: Dell Inc.
Product Name: Inspiron 7391 2n1
Comment 1 Joshua Goins 2023-07-26 08:27:03 UTC
Git commit d749434a1628a0f7146602b467811daed92ea04b by Joshua Goins.
Committed on 26/07/2023 at 09:18.
Pushed by carlschwan into branch 'master'.

Open account links inside Tokodon

Instead of leading people to a webpage

M  +3    -2    src/content/ui/StatusDelegate/PostContent.qml
M  +1    -1    src/content/ui/main.qml
M  +7    -0    src/timeline/post.cpp

https://invent.kde.org/network/tokodon/-/commit/d749434a1628a0f7146602b467811daed92ea04b
Comment 2 Carl Schwan 2023-07-26 08:27:22 UTC
Git commit 895561be03f413369ceb318f16b503cad00303ed by Carl Schwan, on behalf of Joshua Goins.
Committed on 26/07/2023 at 10:27.
Pushed by carlschwan into branch 'release/23.08'.

Open account links inside Tokodon

Instead of leading people to a webpage


(cherry picked from commit d749434a1628a0f7146602b467811daed92ea04b)

M  +3    -2    src/content/ui/StatusDelegate/PostContent.qml
M  +1    -1    src/content/ui/main.qml
M  +7    -0    src/timeline/post.cpp

https://invent.kde.org/network/tokodon/-/commit/895561be03f413369ceb318f16b503cad00303ed