Open account links inside Tokodon

Instead of leading people to a webpage

BUG: 472496


(cherry picked from commit d749434a1628a0f7146602b467811daed92ea04b)