src/content/ui/main.qml
@@ -434,7 +434,7 @@ Kirigami.ApplicationWindow {
         parent: overlay.parent
         property alias text: linkText.text
         opacity: text.length > 0 ? 1 : 0
-        visible: !Kirigami.Settings.isMobile && !text.startsWith("hashtag:")
+        visible: !Kirigami.Settings.isMobile && !text.startsWith("hashtag:") && !text.startsWith("account:")
 
         z: 999990
         x: 0
